# GoodAirPipeline

./: .env.example  .gitignore  DATA_CATALOG.md  Dockerfile  README.md  README_TIMEZONE.md  docker-compose.yaml  pyproject.toml
config/: cities_config.json  open_meteo_config.json  pipeline_config.yaml
dags/: goodair_dag.py
docs/: AUDIT_NOUVELLE_SOURCE.md  AUDIT_SOURCES.md  BENCHMARK_OUTILS.md  DATA_CATALOG.md  EVALUATION_MODELE.md  GLOSSAIRE_ML.md  PRINCIPE_DE_DEVELOPPEMENT_PIPELINE.md  QUALITE_DONNEES.md  STRATEGIE_DATAWAREHOUSE.md  STRATEGIE_STOCKAGE.md  TEST_UNITAIRE.md  VISUALISATION_METABASE.md
notebooks/: 01_eda_goodair.ipynb  02_eda_open_meteo.ipynb  03_eda_combined.ipynb  04_data_preparation.ipynb  05_modeling.ipynb  06_evaluation.ipynb
src/extract/: extract_apis.py
src/load/: load_gold.py
src/ml/: feature_engineering.py  predict.py
src/sql/: 01_init_goodair_dw.sql  02_merge_fact_mesures.sql  03_data_catalog.sql  04_requetes_utiles.sql  05_security_roles.sql  06_diagnostic_admin.sql  08_alertes_predites.sql
src/transform/: transform_silver.py
src/utils/: connections.py
tests/: test_extract.py  test_load.py  test_transform.py
