[project]
name = "goodairpipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.1.8",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "minio>=7.2.20",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.48",
    "xgboost>=3.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
